Python×データサイエンス 例題

--- a/第5章.ipynb
+++ b/第5章.ipynb
@@ -203,16 +203,16 @@
       "source": [
         "def wa( x, y ):  # 和を求める関数\n",
         "    w = x + y\n",
-        "    return w  # return x + y でもよい\n",
+        "    return w     # return x + y でもよい\n",
         "\n",
-        "def hosi( n ): # \"*\"をn個表示する関数\n",
+        "def hosi( n ):   # \"*\"をn個表示する関数\n",
         "    print(\"*\" * n)\n",
         "\n",
-        "a = 10\n",
-        "b = 20\n",
+        "a = 1\n",
+        "b = 2\n",
         "c = wa(a, b) # 和を求める\n",
         "print(\"c=\", c)\n",
-        "hosi(10)   # \"*\"を10個表示\n",
+        "hosi(3)    # \"*\"を3個表示\n",
         "hosi(5)    # \"*\"を5個表示"
       ],
       "metadata": {
@@ -220,16 +220,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rnmhGk-fsgev",
-        "outputId": "e015db68-2255-48fe-b198-0aca2b699e24"
+        "outputId": "23138a3f-cc56-4de3-f926-52e900395494"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "c= 30\n",
-            "**********\n",
+            "c= 3\n",
+            "***\n",
             "*****\n"
           ]
         }
@@ -262,15 +262,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fobFczZttZa2",
-        "outputId": "af0e5cbd-2b7a-4315-d18b-9c432a5fa8bf"
+        "outputId": "7384c33b-ad15-40ec-a901-c5fee081bf2b"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "65\n"
+            "w= 65\n"
           ]
         }
       ]
@@ -291,7 +291,7 @@
         "    print(\"Hello,\", name)  # nameを使って出力\n",
         "\n",
         "func()           # 引数なし（デフォルト値\"Yamada\"が使われる）\n",
-        "func(\"Suzuki\")  # 引数を指定（\"Suzuki\"を使用）"
+        "func(\"Suzuki\")   # 引数を指定（\"Suzuki\"を使用）"
       ],
       "metadata": {
         "colab": {
@@ -469,7 +469,7 @@
         "a = \"Tokyo\"\n",
         "n = a.count(\"o\")          # ① \"o\"の数を数える\n",
         "print('count(\"o\"):', n)\n",
-        "b = a.replace(\"o\", \"@\")  # ② \"o\"を\"@\"に置き換える\n",
+        "b = a.replace(\"o\", \"@\")   # ② \"o\"を\"@\"に置き換える\n",
         "print('replace(\"o\", \"@\"):', b)"
       ],
       "metadata": {
@@ -547,12 +547,12 @@
         "    def chgName(self, name):  # 名前を変えるメソッド\n",
         "        self.v = name  # 引数をself.v に代入\n",
         "\n",
-        "    def prtName(self):  # 名前を表示するメソッド\n",
+        "    def prtName(self): # 名前を表示するメソッド\n",
         "        print(self.v)\n",
         "\n",
-        "pr = Prt(\"yamada\")    # ① インスタンスの作成\n",
+        "pr = Prt(\"yamada\")     # ① インスタンスの作成\n",
         "pr.prtName()           # ② 名前を表示\n",
-        "pr.chgName(\"suzuki\")  # ③ self.vの値を変更\n",
+        "pr.chgName(\"suzuki\")   # ③ self.vの値を変更\n",
         "pr.prtName()           # ④ 名前を表示"
       ],
       "metadata": {
@@ -602,9 +602,9 @@
         "\n",
         "    def printTime(self):  # 経過時間を「時:分:秒」の形式で表示\n",
         "        elapsed = self.calcTime()   # 経過時間（秒）\n",
-        "        h = elapsed // 3600          # 時\n",
+        "        h = elapsed // 3600         # 時\n",
         "        m = (elapsed % 3600) // 60  # 分\n",
-        "        s = elapsed % 60             # 秒\n",
+        "        s = elapsed % 60            # 秒\n",
         "        print(f\"経過時間: {h} 時間 {m} 分 {s} 秒\")\n",
         "\n",
         "timer = LapTime()\n",
@@ -648,26 +648,26 @@
         "        self.height = height  # 縦の長さ\n",
         "        self.char = char      # 表示する文字\n",
         "\n",
-        "    def setWidth(self, width):    # 横の長さをセット\n",
+        "    def setWidth(self, width):    # ① 横の長さをセット\n",
         "        self.width = width\n",
         "\n",
-        "    def setHeight(self, height):  # 縦の長さをセット\n",
+        "    def setHeight(self, height):  # ② 縦の長さをセット\n",
         "        self.height = height\n",
         "\n",
-        "    def setChar(self, char):      # 表示する文字をセット\n",
+        "    def setChar(self, char):      # ③ 表示する文字をセット\n",
         "        self.char = char\n",
         "\n",
-        "    def printRect(self):  # 四角形を描画\n",
+        "    def printRect(self):  # ④ 四角形を描画\n",
         "        for _ in range(self.height):  # 高さの分だけ繰り返し\n",
         "            print(self.char * self.width)  # 文字を出力\n",
         "\n",
         "rect = Rectangle()  # デフォルトの四角形(横5×縦3, \"+\")を作成\n",
-        "rect.printRect()    # ① 四角形を表示\n",
+        "rect.printRect()    # 四角形を表示\n",
         "print()  # 改行\n",
-        "rect.setWidth(10)   # ② 横の長さを 10 に変更\n",
-        "rect.setHeight(2)   # ③ 縦の長さを 2 に変更\n",
-        "rect.setChar(\"*\")   # ④ 表示する文字を \"*\" に変更\n",
-        "rect.printRect()    # ⑤ 四角形を再描画"
+        "rect.setWidth(10)   # 横の長さを 10 に変更\n",
+        "rect.setHeight(2)   # 縦の長さを 2 に変更\n",
+        "rect.setChar(\"*\")   # 表示する文字を \"*\" に変更\n",
+        "rect.printRect()    # 四角形を再描画"
       ],
       "metadata": {
         "colab": {
