--- a/第7章.ipynb
+++ b/第7章.ipynb
@@ -330,16 +330,16 @@
         "import pandas as pd\n",
         "df = pd.read_csv(\"/content/drive/MyDrive/sample.csv\")\n",
         "print(df[df[\"県コード\"] == 20])  # 県コードが20\n",
-        "print(df[df[\"人口\"] > 700])      # 人口が700以上"
+        "print(df[df[\"人口\"] > 700])      # 人口が700より大きい"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "aoIHY7DV7lrw",
-        "outputId": "10f04fcd-38bb-47cd-dc0a-aa0207092c32"
+        "outputId": "de55b973-6ff1-4dca-bce2-db44bffc5bbe"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
