Python x データサイエンス例題

--- a/第2章.ipynb
+++ b/第2章.ipynb
@@ -412,9 +412,18 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "KgNJEjzronY4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "### 2.4.1　ゼロで割った場合"
+        "### 　ゼロで割った場合"
       ],
       "metadata": {
         "id": "fNKo8a8pI4Qh"
@@ -424,7 +433,7 @@
       "cell_type": "code",
       "source": [
         "t = 0\n",
-        "print(10 /t )   # ゼロで割るためエラー発生"
+        "print(10 / t)   # ゼロで割るためエラー発生"
       ],
       "metadata": {
         "colab": {
@@ -476,7 +485,7 @@
         "a = 123\n",
         "print(\"aの値=%6d\" % a)    # 整数を6桁で表示（右寄せ）\n",
         "b = 12.345\n",
-        "print(\"bの値=%6.2f\" % b)  # 全部で6桁小数点以下2桁"
+        "print(\"bの値=%6.2f\" % b)  # 全部で6桁かつ小数点以下2桁"
       ],
       "metadata": {
         "colab": {
@@ -736,7 +745,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 2.7.1　２つの整数を入力する場合"
+        "###2つの整数を入力する場合"
       ],
       "metadata": {
         "id": "yIx5KIReJ23S"
