--- a/第7章.ipynb
+++ b/第7章.ipynb
@@ -50,9 +50,9 @@
         "import numpy as np\n",
         "s1 = pd.Series([2, 5, 2, 1])  # ① s1に4つの数値を作成\n",
         "print(s1)\n",
-        "s2 = pd.Series([11,13,15], index=[\"東京\",\"長野\",\"埼玉\"])  # ②\n",
+        "s2 = pd.Series([11,13,15], index=[\"東京\",\"長野\",\"埼玉\"])  # ② 対応する県コードを設定\n",
         "print(s2)\n",
-        "print(\"長野=\", s2[\"長野\"])             # ③ 長野の県コードを表示\n",
+        "print(\"長野=\", s2[\"長野\"])           # ③ 長野の県コードを表示\n",
         "s3 = pd.Series(np.random.random(4))  # ④ 4個の乱数を作成\n",
         "print(s3)  # 乱数の表示"
       ],
@@ -102,8 +102,8 @@
       "source": [
         "import pandas as pd\n",
         "ix = [\"パソコン\", \"マウス\", \"プリンタ\"]  # ① 商品名\n",
-        "v = [10, 5, 2]                     # ② 売上個数\n",
-        "uriage = pd.Series(v, index = ix)  # Seriesを作成\n",
+        "v = [10, 5, 2]                      # ② 売上個数\n",
+        "uriage = pd.Series(v, index = ix)   # Seriesを作成\n",
         "print(uriage)  # データを表示\n",
         "print(\"マウス:\", uriage[\"マウス\"])  # ③ 「マウス」の個数を表示\n",
         "print(uriage.values)  # ④ データ値（売上個数）を表示\n",
@@ -339,7 +339,7 @@
         "id": "aoIHY7DV7lrw",
         "outputId": "de55b973-6ff1-4dca-bce2-db44bffc5bbe"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
